=head1 Krang Changelog

This document contains a list of changes for each release of Krang.

=head2 v1.101 - In Development

=over

=item *

Upgraded L<Imager> to 0.44 from 0.43, which fixes a bug involving
thumbnailing of extreme-aspect-ratio images. [Peter]

=item *

Fixed error message trapping in C<bin/krang_install> to get Krang to
play nicer with MySQL 4.1.x [Peter]

=item *

C<bin/krang_install> and C<bin/krang_createdb> now handle the C<@localhost>
in the MySQL user creation consistently. [Perrin]

=item *

C<bin/krang_ctl> no longer uses sudo for starting things on unprivileged
ports. [Perrin]

=item *

Upgraded L<Scalar-List-Utils> to 1.14 from 1.09 - this should fix some
compilation issues with MacOSX. [Peter]

=back

=head2 v1.100 - January 4, 2005

=over

=item *

C<About Krang> now reports server IP address, Addons are now
alphabetized properly. [Peter]

=item *

Added server IP address, along with instance-by-instance breakdowns to
C<bin/krang_info> [Peter].

=item *

Fixed a bug in L<Krang::Story>->_load_version() - the restored version
of the story still held outdated checkout and publish settings.  The
restored version now returns default values for those parameters
(e.g. not checked out, not published).  Note that this does not affect
C<revert()>.  The result is that scheduled publication of specific
story versions now works.  [Peter]

=item *

Added C<build_preview_url> to L<Krang::ElementClass::TopLevel>. [Peter]

=item *

Added alt_tag and alt_tag_like searching to L<Krang::Media>, also added
as an option in Media advanced find screen. [Matt]

=item * 

Clicking Story save/save and stay now reorders elements as well. [Matt]

=item *

L<Krang::Story>->find() can now search over a list of site_ids.
[Peter]

=item *

Bugfix to L<Krang::Category>->deserialize_xml().  Circular
dependencies were not being handled properly, causing imports of some
.kds files to fail. [Peter]

=item *

Upgraded DBD-mysql to 2.9004.  [Peter]

=item *
