@@ -300,11 +300,16 @@ duplicate_media_upload "A media object with the filename '$filename' already exi
   checked_out_assets "Some of the assets you are attempting to publish are checked out by other users.  These assets will not be published unless they are checked back in."
   file_write_error "A file-system error has occured attempting to write to '$path'.  Please contact operations and request that they remedy the problem."
   deployed                       "Deployed template $id."
+  zero_size_output "The output of story $story_id in category $category_url was zero-length.  The culprit may be an empty $story_class.tmpl."
+
 </Module>
 
 <Module "Krang::CGI::ListGroup">
  lists_saved "List Group saved."
 </Module>
+
+
+
 
 ###############################
 # test messages, do not alter #
